# metadarkmatter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
config/: default_config.yaml
docs/: ALGORITHM_DETAILED.md  ALIGNMENT_OUTPUT_STATISTICS.md  API_REFERENCE.md  ARCHITECTURE.md  CALIBRATION.md  CALIBRATION_RESULTS.md  CHANGELOG.md  CLASSIFICATION_STATISTICS.md  CLI_REFERENCE.md  COVERAGE_WEIGHTING_IMPLEMENTATION_PLAN.md  DOCUMENTATION_STREAMLINING_SUMMARY.md  EXTERNAL_TOOLS.md  METHODS.md  PERFORMANCE.md  PRODUCTION_READINESS.md  README.md  REFERENCE.md  STATISTICAL_ASSUMPTIONS.md  STATISTICS_AUDIT.md  TECHNICAL_MANUAL.md  TROUBLESHOOTING.md  TUTORIAL_ENVIRONMENTAL_SPECIES.md  USER_GUIDE.md  WORKFLOW.md  mmseqs2-integration.md
docs/ARCHIVED/: 2026-02-05-phylogeny-implementation.md  2026-02-10-classification-improvements-design.md  ORIGINAL_PLAN.md
docs/CASE_STUDIES/: SRR25038281_chesapeake_cb52.md
docs/plans/: 2026-02-05-phylogeny-visualization-design.md  2026-02-19-family-validation-design.md  2026-02-19-family-validation-implementation.md  2026-02-20-codebase-simplification-design.md  2026-02-20-codebase-simplification-implementation.md  2026-02-26-report-ux-redesign.md  2026-02-27-phylogenetic-neighborhood-design.md  2026-02-27-phylogenetic-neighborhood-implementation.md  2026-02-27-tree-build-design.md  2026-02-27-tree-build-implementation.md
scripts/: build_corpus.py  build_metrics_tsv.py  build_synthetic_benchmark.py  calibrate_bayesian.py  calibrate_entropy.py  run_calibration_evaluation.py  run_per_read_calibration.sh  run_pipeline.sh
src/metadarkmatter/: __init__.py
src/metadarkmatter/cli/: __init__.py  aai.py  ani.py  blast.py  blastx.py  doctor.py  download.py  errors.py  kraken2.py  main.py  map.py  mapping.py  mmseqs2.py  options.py  proteins.py  report.py  run.py  score.py  tree.py  util.py  utils.py  validate.py  visualize.py
src/metadarkmatter/clients/: __init__.py  gtdb.py
src/metadarkmatter/core/: __init__.py  aai_matrix_builder.py  ani_matrix_builder.py  ani_placement.py  ani_placement.py.backup  constants.py  exceptions.py  genome_utils.py  id_mapping.py  io_utils.py  logging_config.py  metadata.py  parsers.py  protein_constants.py  random.py  recruitment.py  runtime.py  sequence_validation.py
src/metadarkmatter/core/classification/: __init__.py  adaptive.py  ani_matrix.py  bayesian.py  evaluation.py  qc.py  runner.py  sensitivity.py  sparse_ani_matrix.py  thresholds.py
src/metadarkmatter/core/classification/classifiers/: __init__.py  base.py  parallel.py  vectorized.py
src/metadarkmatter/core/novel_diversity/: __init__.py  clustering.py  models.py  neighborhood.py
src/metadarkmatter/core/phylogeny/: __init__.py  placement.py  tree_builder.py
src/metadarkmatter/core/pipeline/: __init__.py  orchestrator.py
src/metadarkmatter/io/: __init__.py
src/metadarkmatter/models/: __init__.py  blast.py  classification.py  config.py  genomes.py  pipeline_config.py
src/metadarkmatter/utils/: __init__.py
src/metadarkmatter/visualization/: __init__.py  recruitment_plots.py
src/metadarkmatter/visualization/plots/: __init__.py  base.py  classification_charts.py  distributions.py  multi_sample.py  scatter_2d.py
src/metadarkmatter/visualization/report/: __init__.py  generator.py  models.py  multi_generator.py  novel_section.py  styles.py  templates.py
src/metadarkmatter/visualization/report/assets/: __init__.py
src/metadarkmatter/visualization/report/components/: __init__.py  clustering.py  extended_matrix_builder.py  heatmap_builder.py
src/metadarkmatter/visualization/report/sections/: __init__.py  _base.py  classification.py  data.py  novel.py  phylogeny.py  reference.py  summary.py
tests/: benchmark_classifiers.py  conftest.py  factories.py
tests/e2e/: __init__.py  conftest.py  test_download_commands.py  test_edge_cases.py  test_error_handling.py  test_happy_path.py  test_mmseqs2_end_to_end.py  test_mmseqs2_workflow_mock.py  test_mode_equivalence.py  test_new_features.py  test_novel_species_detection.sh
tests/fixtures/: gtdb_francisella_response.json  gtdb_francisellaceae_response.json  test_genomes.py
tests/integration/: conftest.py  test_calibration_regression.py  test_cli.py  test_download_live.py  test_family_validation.py  test_mmseqs2_integration.py  test_neighborhood_integration.py  test_pipeline_determinism.py  test_report_phylogeny.py
tests/unit/: test_aai_matrix.py  test_adaptive.py  test_ani_matrix_builder.py  test_ani_matrix_class.py  test_ani_placement.py  test_bayesian.py  test_bayesian_calibration.py  test_blast_models.py  test_classification.py  test_classification_runner.py  test_classifier_equivalence.py  test_classify_config.py  test_cli_blast_ani_download.py  test_cli_doctor.py  test_cli_errors.py  test_cli_mapping.py  test_cli_remaining.py  test_cli_report.py  test_cli_score.py  test_cli_sensitivity.py  test_cli_tree.py  test_cli_utils.py  test_cli_visualize_mmseqs2.py  test_clustering_determinism.py  test_config.py  test_config_models.py  test_entropy_calibration.py  test_evaluation.py  test_exceptions.py  test_extended_matrix_builder.py  test_external_base.py  test_external_tools.py  test_external_wrappers.py  test_family_validation.py  test_fastani_batches.py  test_genome_models.py  test_genome_utils.py  test_global_dry_run.py  test_gtdb_cache.py  test_gtdb_client.py  (+29 more)
tests/utils/: __init__.py  assertions.py
