[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "metadarkmatter"
version = "0.1.0"
description = "ANI-weighted placement uncertainty for detecting novel microbial diversity in environmental eDNA samples"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Metadarkmatter Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
keywords = ["metagenomics", "eDNA", "taxonomy", "ANI", "microbial-ecology", "environmental-monitoring"]

dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "biopython>=1.83",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "plotly>=5.18.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
viz = [
    "kaleido>=0.2.1",
    "matplotlib>=3.8.0",
]
adaptive = [
    "scikit-learn>=1.3.0",
]

[project.scripts]
metadarkmatter = "metadarkmatter.cli.main:app"
mdm = "metadarkmatter.cli.main:app"

[project.urls]
Repository = "https://github.com/metadarkmatter/metadarkmatter"

[tool.hatch.build.targets.wheel]
packages = ["src/metadarkmatter"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/config"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["metadarkmatter"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["plotly.*", "polars.*", "Bio.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "-v"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external tools",
    "e2e: marks end-to-end tests with mock data",
    "requires_mmseqs2: marks tests as requiring MMseqs2 installation",
    "requires_blast: marks tests as requiring BLAST installation",
]

[tool.coverage.run]
source = ["src/metadarkmatter"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
fail_under = 78
