[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "metadarkmatter"
version = "0.2.0"
description = "ANI-weighted placement uncertainty for detecting novel microbial diversity in environmental eDNA samples"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Metadarkmatter Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
keywords = ["metagenomics", "eDNA", "taxonomy", "ANI", "microbial-ecology", "environmental-monitoring"]

dependencies = [
    "polars>=1.36.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "biopython>=1.83",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "plotly>=5.18.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
viz = [
    "kaleido>=0.2.1",
    "matplotlib>=3.8.0",
]
adaptive = [
    "scikit-learn>=1.3.0",
]

[project.scripts]
metadarkmatter = "metadarkmatter.cli.main:app"
mdm = "metadarkmatter.cli.main:app"

[project.urls]
Repository = "https://github.com/metadarkmatter/metadarkmatter"

[tool.hatch.build.targets.wheel]
packages = ["src/metadarkmatter"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/config"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
# E501: line length handled by the formatter, not enforced as an error.
# B008: Typer's idiomatic API places typer.Option(...)/typer.Argument(...) calls
#   in parameter defaults; flagging it produces noise on every CLI command.
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["metadarkmatter"]

[tool.ruff.lint.per-file-ignores]
# Test code is intentionally relaxed: broad pytest.raises, open() over Path.open,
# late imports for fixture setup, and mutable class-level fixtures are idiomatic.
"tests/**" = ["E402", "B017", "PTH123", "RUF012", "B904", "SIM117", "SIM105", "RUF005", "RUF043"]
# These modules intersperse module-level constants/app wiring with imports by
# design (CLI command registration, large report builders, lazy optional deps).
"src/metadarkmatter/cli/main.py" = ["E402"]
"src/metadarkmatter/cli/score.py" = ["E402"]
"src/metadarkmatter/clients/gtdb.py" = ["E402"]
"src/metadarkmatter/visualization/report/generator.py" = ["E402"]
"src/metadarkmatter/visualization/report/multi_generator.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]
# Near-fully-strict gate. Only two error codes remain disabled, both because
# they flag legitimate idioms mypy cannot model rather than real bugs:
#   - prop-decorator: pydantic's `@computed_field` placed on top of `@property`
#     (17 sites) is the documented pydantic v2 idiom; mypy core does not support
#     decorators stacked on @property.
#   - override: the external tool wrappers intentionally give each tool a
#     specific `build_command(...)` signature over the base's permissive
#     `(**kwargs)` placeholder used by the polymorphic `run()`.
# Everything else strict is enforced; see docs/PRODUCTION_READINESS.md for the
# codes that were re-enabled (operator, dict-item, arg-type, assignment, ...).
disable_error_code = ["prop-decorator", "override"]

[[tool.mypy.overrides]]
module = ["plotly.*", "polars.*", "sklearn.*", "scipy.*", "yaml", "pandas"]
ignore_missing_imports = true

# BioPython ships a partial py.typed that does not export Bio.Phylo.read/write
# etc. and leaves Clade/find_clades untyped. Treat it as fully untyped so its
# attribute access and calls resolve to Any rather than producing attr-defined /
# no-untyped-call noise in our code.
[[tool.mypy.overrides]]
module = ["Bio.*", "pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "-v"]
timeout = 120
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external tools",
    "e2e: marks end-to-end tests with mock data",
    "requires_mmseqs2: marks tests as requiring MMseqs2 installation",
    "requires_blast: marks tests as requiring BLAST installation",
]

[tool.coverage.run]
source = ["src/metadarkmatter"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
fail_under = 78
